init of multi test