@@ -1,16 +1,24 @@
 package evo.search.experiments;
 
+import com.opencsv.CSVWriter;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 
-import java.io.IOException;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 /**
  * Basic experiment class providing utilities for experiments.
  */
 @Slf4j
-public abstract class Experiment {
+public abstract class Experiment implements Consumer<String[]> {
 
     /**
      * Print a progress bar graph to the console.
@@ -28,6 +36,39 @@ public abstract class Experiment {
     }
 
     /**
+     * Take the experiments arguments and parse the csv file name from the first argument.
+     *
+     * @param args list of arguments
+     * @return csv file name
+     */
+    public static String parseFileName(final String[] args) {
+        String filename = "";
+        if (args.length > 0)
+            filename = Path.of(args[0]).getFileName().toString();
+
+        if (filename.isEmpty())
+            filename = "experiment";
+
+        return filename;
+    }
+
+    /**
+     * Take the experiments arguments and parse the seed from the second argument.
+     *
+     * @param args list of arguments
+     * @return random seed
+     */
+    public static long parseSeed(final String[] args) {
+        if (args.length < 2)
+            return -1;
+        try {
+            return Long.parseLong(args[1]);
+        } catch (final NumberFormatException ignored) {
+            return -1;
+        }
+    }
+
+    /**
      * Get a distinct file from the file system.
      *
      * @param name name prefix to use
@@ -35,18 +76,25 @@ public abstract class Experiment {
      * @return file handler to a distinct file
      */
     public static Path uniquePath(final String name, final String ext) {
-        String filename = name;
-        try {
-            final long count = Files.walk(Path.of("")).filter(
-                    path -> path.getFileName().toString().matches(name + "-\\d+" + ext)
-            ).count();
-            if (count > 0)
-                filename += "-" + count;
-        } catch (final IOException e) {
-            log.error("Could not find a unique path for " + name + ext, e);
-            System.exit(1);
-        }
-        return Path.of(filename + ext);
+        Path candidate = Path.of(name + ext);
+        int count = 0;
+        while (Files.exists(candidate))
+            candidate = Paths.get(String.format("%s-%d%s", name, ++count, ext));
+        return candidate;
     }
 
+    public static <T> CompletableFuture<Void> joinFutures(final List<CompletableFuture<T>> futures, final Consumer<List<T>> consumer) {
+        return CompletableFuture
+                .allOf(futures.toArray(CompletableFuture[]::new))
+                .thenRun(() -> {
+                    final List<T> results = futures.stream()
+                            .map(CompletableFuture::join)
+                            .collect(Collectors.toList());
+                    consumer.accept(results);
+                });
+    }
+
+    @NotNull CSVWriter createCSVWriter(final OutputStream outputStream) {
+        return new CSVWriter(new OutputStreamWriter(outputStream), ',', ' ', '"', "\n");
+    }
 }
